--- a/index.html
+++ b/index.html
@@ -9,5 +9,10 @@
 <body>
     <head>CONCORDIA SAE FORMULA!!!!</head>
     <a ref="stylesheet" href="style.css"></a>
+    <div>
+        <img class="HomeImage" src="/assets/HomeImage.jpg">
+        <img class="Arrow" src="/assets/Arrow 5.jpg">
+    </div>
+    
 </body>
 </html>
