--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <head>CONCORDIA SAE FORMULA!!!!</head>
+    <header>CONCORDIA SAE FORMULA</header>
     <a ref="stylesheet" href="style.css"></a>
     <div>
         <img class="HomeImage" src="/assets/HomeImage.jpg">
