--- a/index.html
+++ b/index.html
@@ -56,6 +56,25 @@
         </ul>
     </div>
 
+    <form>
+        <table>
+            <tr>
+                <td>
+                    <input type="text" placeholder="Email">
+                </td>
+                <td>
+                    <input type="text" placeholder="Name">
+                </td>
+                <td>
+                    <input type="text" placeholder="Last Name">
+                </td>
+                <td>
+                    <input type="text" placeholder="Let's talk">
+                </td>
+            </tr>
+        </table>
+    </form>
+
 
     
 </body>
