--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>SAE Website</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -18,14 +18,6 @@
                 <li><a href="sponsors.html">Sponsors</a></li>
             </ul>
         </nav>
-
-        <div class="scrolling_text">
-            <div class="text">
-                <span>CONCORDIA SAE FORMULA</span>
-            </div>
-            <div class="text">
-                <span>CONCORDIA SAE FORMULA</span>
-            </div>
     
 
     
@@ -34,6 +26,9 @@
     <!-- These are images for the home screen. -->
     <div class="HomeStuff">
         <img class="HomeImage" src="/assets/HomeImage.jpg">
+        <div class="scrolling_text">
+            <div class="overlay_text">CONCORDIA SAE FORMULA</div>
+        </div>
         <img class="Arrow" src="/assets/Arrow5.jpg">
     </div>
    
