--- a/index.html
+++ b/index.html
@@ -21,17 +21,18 @@
             </ul>
         </nav>
 
-        <img class="HomeImage" src="/assets/HomeImage.jpg">
-        <div class="scrolling_text">
-            <div class="overlay_text">CONCORDIA SAE FORMULA</div>
+        <div class="HomeImage"></div>
+        <div class="overlay_text">
+            <div class="scrolling_text">CONCORDIA FORMULA SAE - CONCORDIA FORMULA SAE - CONCORDIA FORMULA SAE</div>
+            <!-- please dont change length cause it will f up timing of the animation -->
         </div>
-        <img class="Arrow" src="/assets/Arrow5.jpg">
+        <div class="arrow"></div>
     </div>
    
 
     <!-- div for about us section -->
     <div class="aboutUsSection">
-        <img class="logo" src="assets/logo.jpg">
+        <div class="logo"></div>
         <p>Our team combines years of knowledge from formerly building combustion race cars in building electric race cars. Our years of mechanical development let us tackle these new technologies head-on while maintaining a solid racing platform. We strive to push Concordia engineering students to become top-notch, relevant future employees in an ever-changing job market. Here at Concordia Formula Racing, we don't just make race cars go fast, we create the race car of the future.</p>
     </div>   
 
