--- a/index.html
+++ b/index.html
@@ -13,19 +13,25 @@
     <!-- These are images for the home screen. -->
     <div class="HomeStuff">
 
-        <nav class="menu">
-            <ul>
+        <header>
+            <ul class="desktop">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="sponsors.html">Sponsors</a></li>
             </ul>
-        </nav>
+            
+            <nav class="mobile"
+                <svg xmlns="http://www.w3.org/2000/svg" width="48" height="32" viewBox="0 0 48 32" fill="none">
+                    <path d="M24 32H0V26.6667H24V32ZM48 18.6667H0V13.3333H48V18.6667ZM48 5.33333H24V0H48V5.33333Z" fill="white"/>
+                </svg>
+            </nav>
+        </header>
 
         <div class="HomeImage"></div>
-        <div class="overlay_text">
-            <div class="scrolling_text">CONCORDIA FORMULA SAE - CONCORDIA FORMULA SAE - CONCORDIA FORMULA SAE</div>
-            <!-- please dont change length cause it will f up timing of the animation -->
-        </div>
+            <div class="overlay_text">
+                <div class="scrolling_text">CONCORDIA FORMULA SAE - CONCORDIA FORMULA SAE - CONCORDIA FORMULA SAE</div>
+                <!-- please dont change length cause it will f up timing of the animation -->
+            </div>
         <div class="arrow"></div>
     </div>
    
