--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>FORMULA SAE - CONCORDIA</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="home-image"></div>
     <div class="wrapper">
         <header>
-            <a href="site.html" class="logo1"></a>
+            <a href="index.html" class="logo1"></a>
 
             <nav>
                 <svg class="close" width="33" height="33" viewBox="0 0 33 33" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -40,7 +40,7 @@
 
         <section class="intro">
             <div class="intro-image+text">
-                <div class="logo2" href="site.html"></div>
+                <div class="logo2"></div>
                 <h1 class="intro-concordia">CONCORDIA</h1>
             </div>
             <p class="subhead">Our team combines years of knowledge from formerly building combustion race cars in building electric race cars. Our years of mechanical development let us tackle these new technologies head-on while maintaining a solid racing platform. We strive to push Concordia engineering students to become top-notch, relevant future employees in an ever-changing job market. Here at Concordia Formula Racing, we don't just make race cars go fast, we create the race car of the future.</p>
