all cards added

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </section>
 
         <section class="intro">
-            <div class="intro-image+text">
+            <div class="intro-imageAndtext">
                 <div class="logo2"></div>
                 <h1 class="intro-concordia">CONCORDIA</h1>
             </div>
@@ -61,24 +61,80 @@
             </div>
 
             <div class="card">
-                <div class="content">
-                    <p class="title">Brakes</p>
-                    <div class="frame">
-                        <div class="card-photo" style="background: url('assets/subsystems/brakes.jpg');"></div>
-                        <p class="text">Responsible for slowing the car through the combination of hydraulic and friction systems.</p>
-                    </div>
-                </div>
+                
+                <p class="title">Brakes</p>
+                <div class="frame">
+                    <div class="card-photo" style="background: url('assets/subsystems/brakes.jpg');"></div>
+                    <p class="text toolong">Responsible for slowing the car through the combination of hydraulic and friction systems.</p>
+               </div>
             </div>
 
             <div class="card">
-                <div class="content">
-                    <p class="title">Chassis</p>
-                    <div class="frame">
-                        <div class="card-photo" style="background: url('assets/subsystems/chassis.jpg');"></div>
-                        <p class="text">Responsible for attaching the other subsystems together as well as protecting the driver from the elements.</p>
-                    </div>                
-                </div>
+                <p class="title">Chassis</p>
+                <div class="frame">
+                    <div class="card-photo" style="background: url('assets/subsystems/chassis.jpg');"></div>
+                    <p class="text">Responsible for attaching the other subsystems together as well as protecting the driver from the elements.</p>
+                </div>                
             </div>
+
+            <div class="card">
+                <p class="title">Data Acquisition</p>
+                <div class="frame">
+                    <div class="card-photo" style="background: url('assets/subsystems/dataAcquisiton.jpg');"></div>
+                    <p class="text">Responsible for the acquiring of sensor data and refining it with the objective of assisting other subsystems with the analysis of said data.</p>
+                </div>                
+            </div>
+
+            <div class="card">
+                <p class="title">Steering</p>
+                <div class="frame">
+                    <div class="card-photo" style="background: url('assets/subsystems/steering.jpg');"></div>
+                    <p class="text">Responsible for the steering geometry, closely related to the suspension subsystem.</p>
+                </div>                
+            </div>
+
+            <div class="card">
+                <p class="title">Suspension</p>
+                <div class="frame">
+                    <div class="card-photo" style="background: url('assets/subsystems/suspension.jpg');"></div>
+                    <p class="text">Responsible for translating forces from the tires into the rest of the car through the establishment of car specific geometry.</p>
+                </div>                
+            </div>
+
+            <div class="card">
+                <p class="title">Wheels & Tires</p>
+                <div class="frame">
+                    <div class="card-photo" style="background: url('assets/subsystems/wheelsTires.jpg');"></div>
+                    <p class="text">Responsible for all cornering and acceleration forces transferring between the road and the car.</p>
+                </div>                
+            </div>
+
+            <div class="card">
+                <p class="title">GLV Electrical</p>
+                <div class="frame">
+                    <div class="card-photo" style="background: url('assets/subsystems/electrical.jpg');"></div>
+                    <p class="text">Responsible for the low voltage systems of the car such as safety equipment and sensing equipment.</p>
+                </div>                
+            </div>
+
+            <div class="card">
+                <p class="title">Powertrain</p>
+                <div class="frame">
+                    <div class="card-photo" style="background: url('assets/subsystems/powertrain.jpg');"></div>
+                    <p class="text">Responsible for the motor, motor controller, and gearbox that power the car.</p>
+                </div>                
+            </div>
+
+            <div class="card">
+                <p class="title">Accumulator</p>
+                <div class="frame">
+                    <div class="card-photo" style="background: url('assets/subsystems/accumulator.jpg');"></div>
+                    <p class="text">Responsible for the battery and its management systems which are mostly high voltage.</p>
+                </div>                
+            </div>
+
+
+
 
         </section>
 
