--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <ul>
                     <li><a class="burger-items" href="">ABOUT US</a></li>
                     <li><a class="burger-items" href="">SUBSYSTEMS</a></li>
-                    <li><a class="burger-items" href="">SPONSORS</a></li>
+                    <li><a class="burger-items" href="sponsors.html">SPONSORS</a></li>
                     <li><a class="burger-items" href="">CONTACT</a></li>
                 </ul>
             </nav>
