--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <div class="card">
                 <p class="title">Aero Design</p>
                 <div class="frame">
-                    <div class="card-photo" style="background: url('assets/subsystems/aero-photo.jpg');"></div>
+                    <img class="card-photo" src="assets/subsystems/aero-photo.jpg" alt="dfasd">                    
                     <p class="text">Responsible for the creation of components such as wings and diffusers used to create downforce and push the car into the ground.</p>
                 </div>
             </div>
@@ -64,7 +64,7 @@
                 
                 <p class="title">Brakes</p>
                 <div class="frame">
-                    <div class="card-photo" style="background: url('assets/subsystems/brakes.jpg');"></div>
+                    <img class="card-photo" src="assets/subsystems/brakes.jpg" alt="dfasd">                    
                     <p class="text toolong">Responsible for slowing the car through the combination of hydraulic and friction systems.</p>
                </div>
             </div>
@@ -72,7 +72,7 @@
             <div class="card">
                 <p class="title">Chassis</p>
                 <div class="frame">
-                    <div class="card-photo" style="background: url('assets/subsystems/chassis.jpg');"></div>
+                    <img class="card-photo" src="assets/subsystems/chassis.jpg" alt="dfasd">                    
                     <p class="text">Responsible for attaching the other subsystems together as well as protecting the driver from the elements.</p>
                 </div>                
             </div>
@@ -80,7 +80,7 @@
             <div class="card">
                 <p class="title">Data Acquisition</p>
                 <div class="frame">
-                    <div class="card-photo" style="background: url('assets/subsystems/dataAcquisiton.jpg');"></div>
+                    <img class="card-photo" src="assets/subsystems/dataAcquisiton.jpg" alt="dfasd">                    
                     <p class="text">Responsible for the acquiring of sensor data and refining it with the objective of assisting other subsystems with the analysis of said data.</p>
                 </div>                
             </div>
@@ -88,7 +88,7 @@
             <div class="card">
                 <p class="title">Steering</p>
                 <div class="frame">
-                    <div class="card-photo" style="background: url('assets/subsystems/steering.jpg');"></div>
+                    <img class="card-photo" src="assets/subsystems/steering.jpg" alt="dfasd">                    
                     <p class="text">Responsible for the steering geometry, closely related to the suspension subsystem.</p>
                 </div>                
             </div>
@@ -96,7 +96,7 @@
             <div class="card">
                 <p class="title">Suspension</p>
                 <div class="frame">
-                    <div class="card-photo" style="background: url('assets/subsystems/suspension.jpg');"></div>
+                    <img class="card-photo" src="assets/subsystems/suspension.jpg" alt="dfasd">                    
                     <p class="text">Responsible for translating forces from the tires into the rest of the car through the establishment of car specific geometry.</p>
                 </div>                
             </div>
@@ -104,7 +104,7 @@
             <div class="card">
                 <p class="title">Wheels & Tires</p>
                 <div class="frame">
-                    <div class="card-photo" style="background: url('assets/subsystems/wheelsTires.jpg');"></div>
+                    <img class="card-photo" src="assets/subsystems/wheelsTires.jpg" alt="dfasd">                    
                     <p class="text">Responsible for all cornering and acceleration forces transferring between the road and the car.</p>
                 </div>                
             </div>
@@ -112,7 +112,7 @@
             <div class="card">
                 <p class="title">GLV Electrical</p>
                 <div class="frame">
-                    <div class="card-photo" style="background: url('assets/subsystems/electrical.jpg');"></div>
+                    <img class="card-photo" src="assets/subsystems/electrical.jpg" alt="dfasd">                    
                     <p class="text">Responsible for the low voltage systems of the car such as safety equipment and sensing equipment.</p>
                 </div>                
             </div>
@@ -120,7 +120,7 @@
             <div class="card">
                 <p class="title">Powertrain</p>
                 <div class="frame">
-                    <div class="card-photo" style="background: url('assets/subsystems/powertrain.jpg');"></div>
+                    <img class="card-photo" src="assets/subsystems/powertrain.jpg" alt="dfasd">
                     <p class="text">Responsible for the motor, motor controller, and gearbox that power the car.</p>
                 </div>                
             </div>
@@ -128,7 +128,7 @@
             <div class="card">
                 <p class="title">Accumulator</p>
                 <div class="frame">
-                    <div class="card-photo" style="background: url('assets/subsystems/accumulator.jpg');"></div>
+                    <img class="card-photo" src="assets/subsystems/accumulator.jpg" alt="dfasd">                    
                     <p class="text">Responsible for the battery and its management systems which are mostly high voltage.</p>
                 </div>                
             </div>
