--- a/index.html
+++ b/index.html
@@ -51,7 +51,11 @@
                 
         </section>
 
+        <div class="meetTeams_scrolling">MEET OUR TEAMS MEET OUR TEAMS</div>
+
         <section class="subsystems">
+            
+
             <div class="card">
                 <p class="title">Aero Design</p>
                 <div class="frame">
@@ -66,7 +70,7 @@
                 <div class="frame">
                     <img class="card-photo" src="assets/subsystems/brakes.jpg" alt="dfasd">                    
                     <p class="text toolong">Responsible for slowing the car through the combination of hydraulic and friction systems.</p>
-               </div>
+                </div>
             </div>
 
             <div class="card">
