--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 <ul>
                     <li><a class="burger-items" href="">ABOUT US</a></li>
                     <li><a class="burger-items" href="">SUBSYSTEMS</a></li>
+                    <li><a class="burger-items" href="">THE TEAM</a></li>
                     <li><a class="burger-items" href="sponsors.html">SPONSORS</a></li>
                     <li><a class="burger-items" href="">CONTACT</a></li>
                 </ul>
@@ -31,7 +32,7 @@
         </header>
 
         <section class="home-page">
-            <div class="scrolling-text"><h1><span>CONCORDIA</span> FORMULA SAE - <span>CONCORDIA</span> FORMULA SAE - <span>CONCORDIA</span> FORMULA SAE </h1></div>
+            <div class="scrolling-text"><h1><span>CONCORDIA</span> FORMULA RACING - <span>CONCORDIA</span> FORMULA RACING - <span>CONCORDIA</span> FORMULA RACING </h1></div>
 
             <svg class="arrow one" width="24" height="33" viewBox="0 0 24 33" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M10.9393 32.0607C11.5251 32.6464 12.4749 32.6464 13.0607 32.0607L22.6066 22.5147C23.1924 21.9289 23.1924 20.9792 22.6066 20.3934C22.0208 19.8076 21.0711 19.8076 20.4853 20.3934L12 28.8787L3.51472 20.3934C2.92893 19.8076 1.97919 19.8076 1.3934 20.3934C0.807612 20.9792 0.807612 21.9289 1.3934 22.5147L10.9393 32.0607ZM10.5 6.55671e-08L10.5 31L13.5 31L13.5 -6.55671e-08L10.5 6.55671e-08Z" fill="black"/>
@@ -51,13 +52,13 @@
                 
         </section>
 
-        <div class="meetTeams_scrolling">MEET OUR TEAMS MEET OUR TEAMS</div>
+        <section class="frame subsystems_title">
+            <div class="subsystems_title">FORMULA SUBSYSTEMS</div>
+        </section>
 
         <section class="subsystems">
-            
-
             <div class="card">
-                <p class="title">Aero Design</p>
+                <p class="title">Aerodynamics</p>
                 <div class="frame">
                     <img class="card-photo" src="assets/subsystems/aero-photo.jpg" alt="dfasd">                    
                     <p class="text">Responsible for the creation of components such as wings and diffusers used to create downforce and push the car into the ground.</p>
@@ -141,6 +142,8 @@
 
 
         </section>
+
+        <section class="sponsors"></section>
 
         <section class="contact">
             <div class="title contact">CONTACT</div>
