sponsor + team section

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <ul>
                     <li><a class="burger-items" href="">ABOUT US</a></li>
                     <li><a class="burger-items" href="">SUBSYSTEMS</a></li>
-                    <li><a class="burger-items" href="">THE TEAM</a></li>
+                    <li><a class="burger-items" href="team.html">THE TEAM</a></li>
                     <li><a class="burger-items" href="sponsors.html">SPONSORS</a></li>
                     <li><a class="burger-items" href="">CONTACT</a></li>
                 </ul>
@@ -40,12 +40,13 @@
         </section>
 
         <section class="intro">
-            <div class="intro-imageAndtext">
-                <div class="logo2"></div>
-                <h1 class="intro-concordia">CONCORDIA</h1>
+            <div class="introFrame">
+                <div class="intro-imageAndtext">
+                    <div class="logo2"></div>
+                    <h1 class="intro-concordia">CONCORDIA</h1>
+                </div>
+                <p class="subhead">Our team combines years of knowledge from formerly building combustion race cars in building electric race cars. Our years of mechanical development let us tackle these new technologies head-on while maintaining a solid racing platform. We strive to push Concordia engineering students to become top-notch, relevant future employees in an ever-changing job market. Here at Concordia Formula Racing, we don't just make race cars go fast, we create the race car of the future.</p>
             </div>
-            <p class="subhead">Our team combines years of knowledge from formerly building combustion race cars in building electric race cars. Our years of mechanical development let us tackle these new technologies head-on while maintaining a solid racing platform. We strive to push Concordia engineering students to become top-notch, relevant future employees in an ever-changing job market. Here at Concordia Formula Racing, we don't just make race cars go fast, we create the race car of the future.</p>
-
             <svg class="arrow two" width="24" height="33" viewBox="0 0 24 33" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M10.9393 32.0607C11.5251 32.6464 12.4749 32.6464 13.0607 32.0607L22.6066 22.5147C23.1924 21.9289 23.1924 20.9792 22.6066 20.3934C22.0208 19.8076 21.0711 19.8076 20.4853 20.3934L12 28.8787L3.51472 20.3934C2.92893 19.8076 1.97919 19.8076 1.3934 20.3934C0.807612 20.9792 0.807612 21.9289 1.3934 22.5147L10.9393 32.0607ZM10.5 6.55671e-08L10.5 31L13.5 31L13.5 -6.55671e-08L10.5 6.55671e-08Z" fill="black"/>
             </svg>
@@ -141,7 +142,21 @@
 
         </section>
 
-        <section class="sponsors"></section>
+        <section class="sponsors">
+            <div class="title sponsor">SPONSORS</div>
+            <div class="sponsorScroll"></div>
+
+            <a href="sponsors.html">View More</a>
+
+        </section>
+
+        <section class="sponsors">
+            <div class="title sponsor">MEET THE TEAM</div>
+            <div class="sponsorScroll"></div>
+
+            <a href="team.html">View More</a>
+
+        </section>
 
         <section class="contact">
             <div class="title contact">CONTACT</div>
