--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
                 </svg>
                     
                 <ul>
-                    <li><a class="burger-items" href="">ABOUT US</a></li>
-                    <li><a class="burger-items" href="">SUBSYSTEMS</a></li>
+                    <li><a class="burger-items" href="#scrolltoIntro">ABOUT US</a></li>
+                    <li><a class="burger-items" href="#scrollToSubs">SUBSYSTEMS</a></li>
                     <li><a class="burger-items" href="team.html">THE TEAM</a></li>
                     <li><a class="burger-items" href="sponsors.html">SPONSORS</a></li>
-                    <li><a class="burger-items" href="">CONTACT</a></li>
+                    <li><a class="burger-items" href="#scrollBottom">CONTACT</a></li>
                 </ul>
             </nav>
 
@@ -39,7 +39,7 @@
             </svg>
         </section>
 
-        <section class="intro">
+        <section class="intro" id="scrolltoIntro">
             <div class="introFrame">
                 <div class="intro-imageAndtext">
                     <div class="logo2"></div>
@@ -53,7 +53,7 @@
                 
         </section>
 
-        <section class="subsystems">
+        <section class="subsystems" id="scrollToSubs">
             <div class="title subsystem">FORMULA SUBSYSTEMS</div>
             <div class="sub_section">
                 <div class="card">
@@ -158,7 +158,7 @@
 
         </section>
 
-        <section class="contact">
+        <section class="contact" id="scrollBottom">
             <div class="title contact">CONTACT</div>
             <form action="mailto:thomasson5leo@gmail.com">
                 <input class="c email" type="text" placeholder="Email">
