transparent header onlyfor mobile +no logo display

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 <body>
     <div class="home-image"></div>
     <div class="wrapper">
+
+        <div id="update"></div>
+
         <header>
             <a href="index.html" class="logo1"></a>
 
