--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
                 <ul>
                     <li><a class="burger-items" href="#scrolltoIntro">ABOUT US</a></li>
                     <li><a class="burger-items" href="#scrollToSubs">SUBSYSTEMS</a></li>
-                    <li><a class="burger-items" href="team.html">THE TEAM</a></li>
-                    <li><a class="burger-items" href="sponsors.html">SPONSORS</a></li>
+                    <li><a class="burger-items" href="team.html">MEET THE TEAM</a></li>
+                    <li><a class="burger-items" href="sponsors.html">SPONSOR US</a></li>
                     <li><a class="burger-items" href="#scrollBottom">CONTACT</a></li>
                 </ul>
             </nav>
